# dapp-experiments

./: .gitignore  LICENSE  README.md
01_todo_app/: README.md  docker-compose.yml  golem-compose.yml  golem-config.yml
01_todo_app/api/: Dockerfile  app.py  requirements.txt
01_todo_app/backend/: Dockerfile  requirements.freeze.txt  requirements.txt  run_api.sh
01_todo_app/db/: run_rqlite.sh
01_todo_app/frontend/: package-lock.json  run_web.sh  tailwind.config.js
01_todo_app/http/: Dockerfile  app.py  run_http.sh
01_todo_app/web/: Dockerfile  nginx.conf  package-lock.json  package.json  run_web.sh  tailwind.config.js
02_weather_stats/: .gitignore  README.md  docker-compose.yml  golem-compose.yml  golem-config.yml  golem-manifest.json
02_weather_stats/docs/: response-time-measurements.md
02_weather_stats/playground/: Dockerfile  docker-compose.yml  requirements.txt  run.sh
02_weather_stats/weatherstatsapi/: .pre-commit-config.yaml  README.md  docker-compose.yml  lint.sh  pyproject.toml  requirements.txt  run.py
02_weather_stats/weatherstatsapi/tests/weather/openweather/: conftest.py  test_client.py  test_schemas.py
02_weather_stats/weatherstatsapi/weather/: app.py  cache.py  schemas.py  settings.py  weather.py
02_weather_stats/weatherstatsapi/weather/api/: routes.py
02_weather_stats/weatherstatsapi/weather/openweather/: client.py  exceptions.py  schemas.py  settings.py
02_weather_stats/weatherstatsapp/: Dockerfile  docker-compose.yml  nginx.conf
03_apipinger/: docker-compose.yaml  golem-compose.yml  golem-config.yml  golem-manifest.json  requirements.txt
03_apipinger/pinger/: apis.py  app.py  measurements.py
04_glm_query/: .gitignore  README.md  docker-compose.yml  glm_query.yaml  golem-compose.yml  golem-config.yml  server_manifest.json  server_manifest.json.base64
04_glm_query/frontend/: Dockerfile  next.config.js  nginx.conf  package-lock.json  package.json  tailwind.config.js
04_glm_query/server/: Dockerfile  pyproject.toml
04_glm_query/server/glm_query/: __main__.py  app.py  config.py  eth.py  scanner.py
04_glm_query/server/templates/: index.html
04_nginx_permissions/: Dockerfile  docker-compose.yaml  golem-compose.yml  ls-docker-compose.md  ls-gvmi.md  ls-local.md  nginx.conf
04_nginx_permissions/src/: index.html  run_web.sh  temp.js
05_fastapi-permissions/: .gitignore  Dockerfile  api-output.md  docker-compose.yml  golem-compose.yml  golem-config.yml
05_fastapi-permissions/src/: app.py
05_hello_world/: Dockerfile  golem_config.yaml  hello_world.yaml
05_hello_world/server_app/: hello_world.py  pyproject.toml
apipinger/: .gitignore  Dockerfile  README.md  golem-compose.yml  golem-config.yml  golem-manifest.json  pyproject.toml  run.sh  swarm_pinger.py
apipinger/docs/: api-pinger-tests-raport-01.md
apipinger/pinger/: pinger.py  routers.py  utils.py
apipinger/pinger/docs/: api-pinger-tests-raport-01.md
apipinger/utils/: stats_from_measurements.py  swarm_pinger.py
weather_stats/: README.md  docker-compose.yml  golem-compose-manifest.yml  golem-compose-vm.yml  golem-compose.yml  golem-config.yml  golem-manifest.json
weather_stats/docs/: response-time-measurements.md
weather_stats/weatherstatsapi/: .api-env  Dockerfile  README.md  (+3 more)
(+71 files in other folders)
