[tool.poetry]
name = "apipinger"
version = "0.1.0"
description = "Pings APIs and saves measurements"
authors = ["Lucjan Dudek <lucekdudek@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.3"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.4"
mypy = "^0.991"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
