[tool.poetry]
name = "weatherstatsapi"
version = "0.1.0"
description = "internal API of dapps weather stats"
authors = ["Lucjan Dudek <lucekdudek@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.1"
aiohttp = "^3.8.3"
pydantic = "^1.10.2"
uvicorn = {extras = ["standard"], version = "^0.19.0"}
yarl = "^1.8.1"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
mypy = "^0.982"
isort = "^5.10.1"
flake8 = "^5.0.4"
pytest = "^7.2.0"
pytest-asyncio = "^0.20.1"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
