[tool.poetry]
name = "glm_query"
version = "0.1.0"
description = ""
authors = ["shadeofblue <blue@golem.network>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
web3 = "^5.31.1"
click = "^8.1.3"
flask = "^2.2.2"
flask-cors = "3.0.10"

[tool.poetry.scripts]
glm_query = "glm_query.__main__:_cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
